--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>EPP divulgações</title>
-  <link rel="icon" href="imagens/EPPpreto.png" />
+  <link rel="icon" href="EPPpreto.png" />
   <style>
     /* Links */
     a {
@@ -192,7 +192,7 @@
 </head>
 <body>
   <div class="menu">
-  <img style="width: 90px;" src="imagens/EPPbranco.png" alt="EPPbranco">
+  <img style="width: 90px;" src="EPPbranco.png" alt="EPPbranco">
       <a class="a2" href="index.html">Início</a>
       <a class="a2" href="planos.html" target="_blank">Planos</a>
       <a class="a2" href="https://discord.gg/eJHfMf3xRH" target="_blank">Discord</a>
@@ -233,9 +233,9 @@
 
   <div class="end">
     <h2>Redes sociais</h2>
-    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src="imagens/discord.png" alt="Discord" /></a>
+    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src=" discord.png" alt="Discord" /></a>
     <hr />
-    <img class="logo" src="imagens/EPPbranco.png" alt="EPPbranco" />
+    <img class="logo" src="EPPbranco.png" alt="EPPbranco" />
     <p>© 2025 EPP divulgações - Todos os direitos reservados.</p>
     <hr />
   </div>
