--- a/planos.html
+++ b/planos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planos</title>
-    <link rel="icon" href="imagens/EPPpreto.png">
+    <link rel="icon" href="EPPpreto.png">
     <style>
 @media (max-width: 480px) {
     main {
@@ -42,7 +42,7 @@ body {
 </head>
 <body>
      <div class="menu">
-        <img src="imagens/EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
+        <img src="EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
         <div class="a1">
         <a class="a2" href="index.html" style="text-decoration: none;">inicio</a>&nbsp
         <a class="a2" href="planos.html" style="text-decoration: none;">Planos</a>&nbsp
