--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
+     <link rel="icon" href="EPPpreto.png" />
     <style>
         body {
             background-color: rgb(245, 173, 121);
