--- a/sobrenos.html
+++ b/sobrenos.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="imagens/EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
+        <img src="EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
         <div class="a1">
         <a class="a2" href="index.html" style="text-decoration: none;" >inicio</a>&nbsp
         <a class="a2" href="planos.html"  style="text-decoration: none;">Planos</a>&nbsp
