--- a/index.html
+++ b/index.html
@@ -5,23 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>EPP divulgações</title>
-  <link rel="icon" href="EPPpreto.png" />
+  <link rel="icon" href="EPPbranco.png" />
+ 
+
   <style>
+@font-face {
+  font-family: 'Winter Lemon';
+  src: url('Winter\ Lemon.ttf') format('truetype');
+}
+
+
+
+
     /* Links */
     a {
       text-decoration: none;
       color: white;
       font-weight: bold;
       padding: 10px;
+      text-align: center;
     }
 
     body {
       background-color: rgb(245, 173, 121);
       margin: 0;
-      font-family: 'Lucida Sans', Geneva, Verdana, sans-serif;
+      font-family:  'Lucida Sans', Geneva, Verdana, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
+
     }
 
     img {
@@ -31,13 +43,14 @@
     }
 
     /* Menu */
-    .menu {
+     .menu {
+    background-color: black;
+      text-align: center;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
       width: 100%;
-      background-color: black;
-      padding: 20px 10px;
-      gap: 15px;
-      color: azure;
     }
+    
 
     .menu img {
       width: 90px;
@@ -53,6 +66,7 @@
     .a2 {
       text-align: center;
       color: white;
+      font-family: 'Winter Lemon', cursive;
     }
 
     h1 {
@@ -138,11 +152,6 @@
       }
     }
 
-@media (max-width: 768px) {
-      .menu img {
-        width: 70px;
-      }
-    }
 
 
     @media (max-width: 480px) {
@@ -188,21 +197,36 @@
       50% { transform: rotatez(180deg); }
       100% { transform: rotatez(360deg); }
     }
+   
+    .menu a {
+      color: var(--branco);
+      font-weight: bold;
+      text-decoration: none;
+      margin: 0 15px;
+      padding: 8px 12px;
+      transition: background 0.3s, color 0.3s;
+      border-radius: 5px;
+    }
+
+    .menu a:hover {
+      background-color: #ffffff20;
+    }
+
   </style>
 </head>
 <body>
   <div class="menu">
   <img style="width: 90px;" src="EPPbranco.png" alt="EPPbranco">
-      <a class="a2" href="index.html">Início</a>
-      <a class="a2" href="planos.html" target="_blank">Planos</a>
-      <a class="a2" href="https://discord.gg/eJHfMf3xRH" target="_blank">Discord</a>
+      <a class="a2" style="color: white;" href="index.html">Inicio</a>
+      <a class="a2" style="color: white;" href="planos.html">Planos</a>
+      <a class="a2" style="color: white;" href="https://discord.gg/eJHfMf3xRH">Discord</a>
     </div>
  
 
   <h1>EPP divulgações</h1>
 
   <header>
-    <h1>Bem-vindo ao EPP Divulgações</h1>
+    <h1 style=" font-family: 'Winter Lemon', cursive;">Bem-vindo ao EPP Divulgações</h1>
   </header>
 
   <main>
@@ -227,16 +251,16 @@
   </main>
 
   <div class="a3">
-    <a class="button_a" href="https://discord.gg/eJHfMf3xRH" target="_blank">Participe</a>
-    <a class="button_a" href="sobrenos.html" target="_blank">Sobre nós</a>
+    <a class="button_a" href="https://discord.gg/eJHfMf3xRH" target="_blank" style=" font-family: 'Winter Lemon', cursive;">Participe</a>
+    <a class="button_a" href="sobrenos.html"  style=" font-family: 'Winter Lemon', cursive;">Sobre nós</a>
   </div>
 
   <div class="end">
-    <h2>Redes sociais</h2>
-    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src=" discord.png" alt="Discord" /></a>
-    <hr />
+    <h2 style=" font-family: 'Winter Lemon', cursive;">Redes sociais</h2>
+    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src="discord.png" alt="Discord" /></a>
+   <hr>
     <img class="logo" src="EPPbranco.png" alt="EPPbranco" />
-    <p>© 2025 EPP divulgações - Todos os direitos reservados.</p>
+    <p style="font-weight: bold;  font-family: 'Winter Lemon', cursive;">© 2025 EPP divulgações - Todos os direitos reservados.</p>
     <hr />
   </div>
 </body>
