--- a/planos.html
+++ b/planos.html
@@ -11,7 +11,9 @@
         padding: 15px;
         margin: 20px;
     } }
-
+.planos {
+  margin-top: 90px;
+}
      a    {
     text-decoration: none;
     color: rgb(255, 255, 255);
@@ -38,22 +40,40 @@ body {
             padding: 20px;
             margin-top: 20px;
         }
+        .menu a {
+      color: var(--branco);
+      font-weight: bold;
+      text-decoration: none;
+      margin: 0 15px;
+      padding: 8px 12px;
+      transition: background 0.3s, color 0.3s;
+      border-radius: 5px;
+    }
+
+    .menu a:hover {
+      background-color: #ffffff20;
+    }
+    @font-face {
+  font-family: 'Winter Lemon';
+  src: url('Winter\ Lemon.ttf') format('truetype');
+}
+
     </style>
 </head>
 <body>
      <div class="menu">
         <img src="EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
         <div class="a1">
-        <a class="a2" href="index.html" style="text-decoration: none;">inicio</a>&nbsp
-        <a class="a2" href="planos.html" style="text-decoration: none;">Planos</a>&nbsp
-        <a class="a2" href="https://discord.gg/eJHfMf3xRH" target="_blank" style="text-decoration: none;">discord</a>&nbsp
+        <a style=" font-family: 'Winter Lemon'; color: white;" class="a2" href="index.html" style="text-decoration: none; color: white;">inicio</a>&nbsp
+        <a style=" font-family: 'Winter Lemon'; color: white;" class="a2" href="planos.html" style="text-decoration: none; color: white;">Planos</a>&nbsp
+        <a style=" font-family: 'Winter Lemon'; color: white;" class="a2" href="https://discord.gg/eJHfMf3xRH" target="_blank" style="text-decoration: none; color: white;">discord</a>&nbsp
         
     </div>
     <div class="planos">
-        <h1>💼 Planos de Servidores</h1>
+        <h1 style=" font-family: 'Winter Lemon';">💼 Planos de Servidores</h1>
 
         <div class="container1">
-            <h2>💎 Plano Patrocinador — $14,99</h2>
+            <h2 style=" font-family: 'Winter Lemon';">💎 Plano Patrocinador — $14,99</h2>
             <ul>
                 <li>📢 3 meses de divulgação do seu servidor</li>
                 <li>🏅 Cargo exclusivo de Patrocinador</li>
