--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
-     <link rel="icon" href="EPPpreto.png" />
+    <link rel="icon" href="imagens/EPPbranco.png"/>
     <style>
+       
         body {
+            font-family: 'Winter Lemon';
             background-color: rgb(245, 173, 121);
             margin: 0;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -18,7 +20,10 @@
             font-weight: bold;
             padding: 10px;
         }
-
+@font-face {
+  font-family: 'Winter Lemon';
+  src: url('Winter/ Lemon.ttf') format('truetype');
+}
         .container {
             max-width: 800px;
             margin: 40px auto;
@@ -31,6 +36,7 @@
 
         h1, h2 {
             text-align: center;
+            font-family: 'Winter Lemon'
         }
 
         ul {
@@ -40,6 +46,7 @@
 
         li {
             margin-bottom: 10px;
+            font-family: 'Winter Lemon'
         }
 
         .section-title {
@@ -47,30 +54,52 @@
             margin-bottom: 10px;
             text-align: center;
         }
-        .menu {
-    height: 150px;
-    background-color: rgb(0, 0, 0);
-    top: 60px;
-    text-shadow: 1px 1px 90px rgb(255, 255, 255);
-    text-align: center;}
+         .menu {
+     width: 100%;
+      background-color: rgb(51, 47, 47);
+     text-align: center;
+      color: azure;
+      height: 150px;
+    }
     @media (max-width: 480px) {
     main {
         padding: 15px;
         margin: 20px;
     } }
+
+    .menu {
+    background-color: black;
+      text-align: center;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      width: 100%;
+    }
+ .menu a {
+      color: var(--branco);
+      font-weight: bold;
+      text-decoration: none;
+      margin: 0 15px;
+      padding: 8px 12px;
+      transition: background 0.3s, color 0.3s;
+      border-radius: 5px;
+    }
+
+    .menu a:hover {
+      background-color: #ffffff20;
+    }
     </style>
 </head>
 <body>
     <div class="menu">
         <img src="EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
         <div class="a1">
-        <a class="a2" href="index.html" style="text-decoration: none;" >inicio</a>&nbsp
-        <a class="a2" href="planos.html"  style="text-decoration: none;">Planos</a>&nbsp
-        <a class="a2" href="https://discord.gg/eJHfMf3xRH"  style="text-decoration: none;">discord</a>&nbsp
+        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="index.html" style="text-decoration: none;" >inicio</a>&nbsp
+        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="planos.html"  style="text-decoration: none;">Planos</a>&nbsp
+        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="https://discord.gg/eJHfMf3xRH"  style="text-decoration: none;">discord</a>&nbsp
         
     </div>
     <div class="container">
-        <h1>💼 Sobre</h1>
+        <h1 style=" font-family: 'Winter Lemon', cursive;">💼 Sobre</h1>
 
         <h2>Quem somos</h2>
         <p style="text-align: center;">Somos uma comunidade iniciante focada em divulgação de conteúdo e interação.</p>
