--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
-    <link rel="icon" href="imagens/EPPbranco.png"/>
+    <link rel="icon" href="EPPbranco.png"/>
     <style>
        
         body {
@@ -22,7 +22,7 @@
         }
 @font-face {
   font-family: 'Winter Lemon';
-  src: url('Winter/ Lemon.ttf') format('truetype');
+  src: url('winter Lemon.ttf') format('truetype');
 }
         .container {
             max-width: 800px;
