--- a/sobrenos.html
+++ b/sobrenos.html
@@ -93,9 +93,9 @@
     <div class="menu">
         <img src="EPPbranco.png" alt="uma foto de epp Divulgações!" width="90px" >
         <div class="a1">
-        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="index.html" style="text-decoration: none;" >inicio</a>&nbsp
-        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="planos.html"  style="text-decoration: none;">Planos</a>&nbsp
-        <a class="a2" style=" font-family: 'Winter Lemon', ;" href="https://discord.gg/eJHfMf3xRH"  style="text-decoration: none;">discord</a>&nbsp
+        <a class="a2"  href="index.html" style="text-decoration: none;" >inicio</a>&nbsp
+        <a class="a2" href="planos.html"  style="text-decoration: none;">Planos</a>&nbsp
+        <a class="a2"  href="https://discord.gg/eJHfMf3xRH"  style="text-decoration: none;">discord</a>&nbsp
         
     </div>
     <div class="container">
