--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>inicio - EPP divulgações</title>
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="icon" href="imagens/EPPbranco.png" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="EPPbranco.png" />
   <style>
     @font-face {
       font-family: 'Winter Lemon';
-      src: url('assets/Winter Lemon.ttf') format('truetype');
+      src: url('Winter Lemon.ttf') format('truetype');
     }
   </style>
 </head>
 <body id="mudarfunco">
   <div class="menu">
-    <img src="imagens/EPPbranco.png" alt="EPPbranco">
+    <img src="EPPbranco.png" alt="EPPbranco">
     <br>
    <a href="menu.html">Inicio</a>
     <a href="planos.html">Planos</a>
@@ -61,12 +61,12 @@
 <video src="" width="100px"></video>
   <div class="end">
     <h2>Redes sociais</h2>
-    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src="imagens/discord.png" alt="Discord" /></a>
+    <a href="https://discord.gg/eJHfMf3xRH"><img class="imb" src="discord.png" alt="Discord" /></a>
     <hr>
-    <img class="logo" src="imagens/EPPbranco.png" alt="EPPbranco" />
+    <img class="logo" src="EPPbranco.png" alt="EPPbranco" />
     <p><strong>© 2025 EPP divulgações - Todos os direitos reservados.</strong></p>
     <hr />
   </div>
-  <script src="javascript/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
