--- a/planos.html
+++ b/planos.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Planos - EPP divulgações</title>
-  <link rel="icon" href="imagens/EPPbranco.png" />
+  <link rel="icon" href="EPPbranco.png" />
   <style>
     @font-face {
       font-family: 'Winter Lemon';
-      src: url('assets/Winter Lemon.ttf') format('truetype');
+      src: url('Winter Lemon.ttf') format('truetype');
     }
 
     body {
@@ -134,7 +134,7 @@
 </head>
 <body>
   <div class="menu">
-    <img src="imagens/EPPbranco.png" alt="EPPbranco" />
+    <img src="EPPbranco.png" alt="EPPbranco" />
     <br />
     <a href="menu.html">Inicio</a>
     <a href="planos.html">Planos</a>
@@ -167,12 +167,12 @@
   <div class="end">
     <h2>Redes sociais</h2>
     <a href="https://discord.gg/eJHfMf3xRH">
-      <img class="imb" src="imagens/discord.png" alt="Discord" />
+      <img class="imb" src="discord.png" alt="Discord" />
     </a>
-    <hr />
-    <img class="logo" src="imagens/EPPbranco.png" alt="EPPbranco" />
+    <hr/>
+    <img class="logo" src="EPPbranco.png" alt="EPPbranco" />
     <p><strong>© 2025 EPP divulgações - Todos os direitos reservados.</strong></p>
-    <hr />
+    <hr/>
   </div>
 </body>
 </html>
