--- a/planos.html
+++ b/planos.html
@@ -136,7 +136,7 @@
   <div class="menu">
     <img src="EPPbranco.png" alt="EPPbranco" />
     <br />
-    <a href="menu.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="planos.html">Planos</a>
     <a href="https://discord.gg/eJHfMf3xRH">Discord</a>
   </div>
