--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sobre nós - EPP divulgações</title>
-    <link rel="icon" href="imagens/EPPbranco.png" />
+    <link rel="icon" href="EPPbranco.png" />
     <style>
         @font-face {
             font-family: 'Winter Lemon';
-            src: url('assets/Winter Lemon.ttf') format('truetype');
+            src: url('Winter Lemon.ttf') format('truetype');
         }
         body {
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -36,7 +36,7 @@
             text-decoration: none;
             margin: 0 15px;
             padding: 8px 12px;
-            font-family: 'Winter Lemon', cursive;
+            font-family: 'Winter Lemon';
             transition: background 0.3s, color 0.3s;
             border-radius: 5px;
             display: inline-block;
@@ -97,9 +97,9 @@
 </head>
 <body>
     <div class="menu">
-        <img src="imagens/EPPbranco.png" alt="Logo EPP Divulgações">
+        <img src="EPPbranco.png" alt="Logo EPP Divulgações">
        <br>
-        <a href="menu.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="planos.html">Planos</a>
         <a href="https://discord.gg/eJHfMf3xRH" target="_blank" rel="noopener noreferrer">Discord</a>
     </div>
