--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sobre nós - EPP divulgações</title>
-    <link rel="icon" href="EPPbranco.png" />
+    <link rel="icon" href="EPPbranco.png/>
     <style>
         @font-face {
             font-family: 'Winter Lemon';
@@ -97,23 +97,23 @@
 </head>
 <body>
     <div class="menu">
-        <img src="EPPbranco.png" alt="Logo EPP Divulgações">
+        <img  src="EPPbranco.png" alt="Logo EPP Divulgações">
        <br>
-        <a href="index.html">Inicio</a>
-        <a href="planos.html">Planos</a>
-        <a href="https://discord.gg/eJHfMf3xRH" target="_blank" rel="noopener noreferrer">Discord</a>
+        <a style="font-family: 'Winter Lemon';" href="index.html">Inicio</a>
+        <a style="font-family: 'Winter Lemon';" href="planos.html">Planos</a>
+        <a style="font-family: 'Winter Lemon';" href="https://discord.gg/eJHfMf3xRH" target="_blank" rel="noopener noreferrer">Discord</a>
     </div>
 
     <div class="container">
-        <h1>💼 Sobre</h1>
+        <h1 style="font-family: 'Winter Lemon';">💼 Sobre</h1>
 
-        <h2>Quem somos</h2>
+        <h2 style="font-family: 'Winter Lemon';">Quem somos</h2>
         <p style="text-align: center;">
             Somos uma comunidade iniciante focada em divulgação de conteúdo e interação.
         </p>
 
         <div class="section">
-            <h3 class="section-title">📢 Onde você pode divulgar</h3>
+            <h3 class="section-title" style="font-family: 'Winter Lemon';">📢 Onde você pode divulgar</h3>
             <ul>
                 <li>Atualmente, no nosso servidor do Discord.</li>
                 <li>No futuro, estaremos presentes em outras redes sociais.</li>
