--- a/planos.html
+++ b/planos.html
@@ -76,7 +76,7 @@
       font-size: 1.5em;
       font-weight: bold;
       color: #ffb380;
-      font-family: 'Winter Lemon', cursive;
+      font-family: 'Winter Lemon';
       cursor: default;
       user-select: none;
     }
